hphp/test/zend/good/ext/standard/tests/strings/004.php.expectregex
shuffle
1234: [3-4][0-9][0-9][0-9]: 0.0[3-4][0-9]
1243: [3-4][0-9][0-9][0-9]: 0.0[3-4][0-9]
1324: [3-4][0-9][0-9][0-9]: 0.0[3-4][0-9]
1342: [3-4][0-9][0-9][0-9]: 0.0[3-4][0-9]
1423: [3-4][0-9][0-9][0-9]: 0.0[3-4][0-9]
1432: [3-4][0-9][0-9][0-9]: 0.0[3-4][0-9]
2134: [3-4][0-9][0-9][0-9]: 0.0[3-4][0-9]
2143: [3-4][0-9][0-9][0-9]: 0.0[3-4][0-9]
2314: [3-4][0-9][0-9][0-9]: 0.0[3-4][0-9]
2341: [3-4][0-9][0-9][0-9]: 0.0[3-4][0-9]
2413: [3-4][0-9][0-9][0-9]: 0.0[3-4][0-9]
2431: [3-4][0-9][0-9][0-9]: 0.0[3-4][0-9]
3124: [3-4][0-9][0-9][0-9]: 0.0[3-4][0-9]
3142: [3-4][0-9][0-9][0-9]: 0.0[3-4][0-9]
3214: [3-4][0-9][0-9][0-9]: 0.0[3-4][0-9]
3241: [3-4][0-9][0-9][0-9]: 0.0[3-4][0-9]
3412: [3-4][0-9][0-9][0-9]: 0.0[3-4][0-9]
3421: [3-4][0-9][0-9][0-9]: 0.0[3-4][0-9]
4123: [3-4][0-9][0-9][0-9]: 0.0[3-4][0-9]
4132: [3-4][0-9][0-9][0-9]: 0.0[3-4][0-9]
4213: [3-4][0-9][0-9][0-9]: 0.0[3-4][0-9]
4231: [3-4][0-9][0-9][0-9]: 0.0[3-4][0-9]
4312: [3-4][0-9][0-9][0-9]: 0.0[3-4][0-9]
4321: [3-4][0-9][0-9][0-9]: 0.0[3-4][0-9]
str_shuffle
1234: [3-4][0-9][0-9][0-9]: 0.0[3-4][0-9]
1243: [3-4][0-9][0-9][0-9]: 0.0[3-4][0-9]
1324: [3-4][0-9][0-9][0-9]: 0.0[3-4][0-9]
1342: [3-4][0-9][0-9][0-9]: 0.0[3-4][0-9]
1423: [3-4][0-9][0-9][0-9]: 0.0[3-4][0-9]
1432: [3-4][0-9][0-9][0-9]: 0.0[3-4][0-9]
2134: [3-4][0-9][0-9][0-9]: 0.0[3-4][0-9]
2143: [3-4][0-9][0-9][0-9]: 0.0[3-4][0-9]
2314: [3-4][0-9][0-9][0-9]: 0.0[3-4][0-9]
2341: [3-4][0-9][0-9][0-9]: 0.0[3-4][0-9]
2413: [3-4][0-9][0-9][0-9]: 0.0[3-4][0-9]
2431: [3-4][0-9][0-9][0-9]: 0.0[3-4][0-9]
3124: [3-4][0-9][0-9][0-9]: 0.0[3-4][0-9]
3142: [3-4][0-9][0-9][0-9]: 0.0[3-4][0-9]
3214: [3-4][0-9][0-9][0-9]: 0.0[3-4][0-9]
3241: [3-4][0-9][0-9][0-9]: 0.0[3-4][0-9]
3412: [3-4][0-9][0-9][0-9]: 0.0[3-4][0-9]
3421: [3-4][0-9][0-9][0-9]: 0.0[3-4][0-9]
4123: [3-4][0-9][0-9][0-9]: 0.0[3-4][0-9]
4132: [3-4][0-9][0-9][0-9]: 0.0[3-4][0-9]
4213: [3-4][0-9][0-9][0-9]: 0.0[3-4][0-9]
4231: [3-4][0-9][0-9][0-9]: 0.0[3-4][0-9]
4312: [3-4][0-9][0-9][0-9]: 0.0[3-4][0-9]
4321: [3-4][0-9][0-9][0-9]: 0.0[3-4][0-9]